# khala-parachain

./: Cargo.toml
cumulus/dmp-queue/: Cargo.toml
cumulus/xcm/: Cargo.toml
cumulus/xcmp-queue/: Cargo.toml
node/src/: chain_spec.rs
pallets/xcm-transfer/src/: common.rs  lib.rs  xcm_helper.rs  xcm_transfer.rs
pallets/xcm-transfer/src/mock/: mod.rs  para.rs
pallets/xtransfer/: Cargo.toml
pallets/xtransfer/src/bridge_transfer/: tests.rs
pallets/xtransfer/src/xcm/: xcm_helper.rs
pallets/xtransfer/src/xcm/mock/: para.rs
runtime/khala/: Cargo.toml
runtime/khala/src/: lib.rs
runtime/thala/: Cargo.toml
runtime/thala/src/: lib.rs
