[profile.release]
panic = "unwind"

[workspace]
resolver = "2"

exclude = [
	"vendor/webpki",
	"vendor/ring",
	"polkadot/node/service"
]

members = [
	"node",
	"parachains-common",
	"crates/phala-types",
	"crates/phala-mq",
	"crates/phala-node-rpc-ext",
	"crates/prpc",
	"crates/phala-trie-storage",
	"pallets/phala",
	"pallets/phala/mq-runtime-api",
	"pallets/bridge",
	"pallets/bridge_transfer",
	"pallets/parachain-info",
	"runtime/khala",
]

[patch."https://github.com/paritytech/polkadot"]
polkadot-service = { path = "polkadot/node/service" }
xcm = { path = "polkadot/xcm" }
xcm-builder = { path = "polkadot/xcm/xcm-builder" }
xcm-executor = { path = "polkadot/xcm/xcm-executor" }
pallet-xcm = { path = "polkadot/xcm/pallet-xcm" }

[patch."https://github.com/paritytech/cumulus"]
cumulus-pallet-dmp-queue = { path = "cumulus/dmp-queue" }
cumulus-pallet-xcm = { path = "cumulus/xcm" }
cumulus-pallet-xcmp-queue = { path = "cumulus/xcmp-queue" }
